--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -17,57 +17,58 @@
     "@ai-sdk-tools/devtools": "workspace:*",
     "@ai-sdk-tools/memory": "workspace:*",
     "@ai-sdk-tools/store": "workspace:*",
-    "@ai-sdk/openai": "^2.0.62",
-    "@ai-sdk/react": "^2.0.86",
+    "@ai-sdk/openai": "^2.0.69",
+    "@ai-sdk/react": "^2.0.97",
     "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@upstash/ratelimit": "^2.0.7",
-    "@xyflow/react": "^12.9.2",
-    "ai": "^5.0.87",
+    "@xyflow/react": "^12.9.3",
+    "ai": "^5.0.97",
     "ai-sdk-tools": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
-    "exa-js": "^2.0.0",
+    "exa-js": "^2.0.6",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
-    "marked": "^16.4.1",
-    "lucide-react": "^0.552.0",
+    "lucide-react": "^0.554.0",
+    "marked": "^17.0.0",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
-    "next": "16.0.1",
+    "next": "16.0.3",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-syntax-highlighter": "^16.1.0",
-    "recharts": "3.3.0",
-    "redis": "^5.9.0",
-    "shiki": "^3.14.0",
+    "recharts": "3.4.1",
+    "redis": "^5.10.0",
+    "shiki": "^3.15.0",
     "sonner": "^2.0.7",
-    "streamdown": "^1.4.0",
-    "tailwind-merge": "^3.3.1",
+    "streamdown": "^1.5.1",
+    "tailwind-merge": "^3.4.0",
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.3",
+    "@biomejs/biome": "2.3.6",
     "@faker-js/faker": "^10.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
